# a

./: .gitignore  Cargo.toml  LICENSE  README.md  a.json  install.sh  quick-install.sh  standalone-install.sh  update.sh
.github/workflows/: build.yml  publish.yml
docs/: user-guide.md
examples/: README.md
examples/react-app/: a.json
examples/react-app/src/: index.jsx
src/: cache.rs  commands.rs  lockfile.rs  main.rs  manifest.rs  registry.rs  resolver.rs
tests/: basic_tests.rs
