[package]
name = "a-pm"
version = "0.1.0"
edition = "2021"
authors = ["Aagam Shah <aagam@example.com>"]
description = "A blazingly fast package manager built with Rust"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/AAGAM17/a"
repository = "https://github.com/AAGAM17/a"
keywords = ["package-manager", "npm", "yarn", "bun", "javascript"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "a"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.0"
tar = "0.4"
flate2 = "1.0"
dirs = "5.0"
tokio-stream = "0.1"
anyhow = "1.0"
semver = "1.0"
futures = "0.3"
num_cpus = "1.16"
